--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: /assets/img/profile-picture.png
 plugins:
 - jekyll-remote-theme
 title: MJ
-description: Hello 👋🏻
+description: Welcome to my Github Page!
